EIP-137 - Fixed test dependencies